# WatchTower

./: .env.example  .gitignore  README.md
assets/launch/: README.md  watchtower-launch.html
assets/presentation/: README.md  render-video.sh  watchtower-deck.html
backend/: requirements-agent.txt  requirements-benchmark.txt  requirements.txt
backend/app/: agent_bridge.py  chat_engine.py  main.py  models.py  state.py
backend/app/agents/: travel_graph.py
backend/app/detection/: __init__.py  behavior.py  engine.py  intents.py  llm_agent.py  llm_judge.py  semantic.py
backend/benchmarks/: README.md  compare_benchmark.py  hf_benchmark.py  results_cascade_fast_100.json  results_comparison_gemini_100.json  results_comparison_gemini_50.json  results_comparison_gemini_50_v2.json  results_comparison_gemini_60.json  results_deepset_200.json  results_deepset_full.json
examples/travel-agent/: DEMO.md  README.md  demo-Copy1.ipynb  demo.ipynb  important.txt  requirements.txt  run.py  travel_agent.py
examples/travel-agent/.ipynb_checkpoints/: DEMO-checkpoint.md  demo-Copy1-checkpoint.ipynb  demo-checkpoint.ipynb  travel_agent-checkpoint.py
examples/travel-agent/workspace/: customer_records.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AgentChat.tsx  AgentTimeline.tsx  AttackGraph.tsx  DashboardWidgets.tsx  (+5 more)
watchtower/: README.md  pyproject.toml
watchtower/watchtower/: __init__.py  client.py  decorators.py
watchtower/watchtower_sentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+11 files in other folders)
